--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /test1
 /360
 node_modules
+/node_modules
 docs/.marking_your_own_pointcloud_loader.md.html
 docs/.file_format.md.html
 docs/.doc.md.html
